# publish-to-bcr

./: .bazelrc  .bazelversion  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  action.yaml  eslint.config.mjs  jest-snapshot-resolver.js  jest.config.js  jest.config.ts  jest.setup.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
.aspect/bazelrc/: BUILD.bazel
.aspect/cli/: config.yaml
.aspect/workflows/: bazelrc  config.yaml
.github/actions/bcr-presubmit-sync/: action.yaml  filter.yq
.github/actions/bcr-presubmit-sync/test/case1/: .bcr_presubmit.yml  gha.yaml
.github/workflows/: action-e2e.yaml  ci.yaml  publish.yaml  release-tgz.yml  release.yaml
bazel/jest/: defs.bzl
bazel/ts/: defs.bzl
deployment/: README.md
deployment/environments/dev/: backend.tf  main.tf  variables.tf
deployment/environments/prod/: BUILD.bazel  backend.tf  main.tf  variables.tf  versions.tf
deployment/modules/remote-state/: main.tf  variables.tf
deployment/modules/webhook/: main.tf  variables.tf
e2e/: BUILD.bazel  README.md  e2e.spec.ts
e2e/__snapshots__/: e2e.spec.js.snap  e2e.spec.ts.snap
e2e/action/: setup-test-fixture.sh  test-github-repository-default-substitution.sh  test-happy-path-content.sh
e2e/cli/: BUILD.bazel  e2e.bats
e2e/fixtures/: BUILD.bazel  fixture.bzl
e2e/fixtures/attestations/: MODULE.bazel  README.md
e2e/fixtures/attestations/.bcr/: attestations.template.json  metadata.template.json  presubmit.yml
e2e/fixtures/empty-prefix/: MODULE.bazel  README.md
e2e/fixtures/empty-prefix/.bcr/: metadata.template.json  source.template.json
e2e/fixtures/fixed-releaser/: MODULE.bazel  README.md
e2e/fixtures/fixed-releaser/.bcr/: metadata.template.json
e2e/fixtures/missing-module-name/: MODULE.bazel  README.md
e2e/fixtures/missing-module-name/.bcr/: metadata.template.json
e2e/fixtures/multi-module/: MODULE.bazel  README.md
e2e/fixtures/multi-module/.bcr/: config.yml  metadata.template.json  source.template.json
e2e/fixtures/multi-module/.bcr/submodule/: metadata.template.json  source.template.json
e2e/fixtures/multi-module/submodule/: MODULE.bazel
e2e/fixtures/no-github-id/: MODULE.bazel  README.md
e2e/fixtures/no-github-id/.bcr/: metadata.template.json
e2e/fixtures/no-prefix/: MODULE.bazel  README.md
e2e/fixtures/no-prefix/.bcr/: metadata.template.json  source.template.json
e2e/fixtures/tarball/: MODULE.bazel
e2e/fixtures/tarball-xz/: MODULE.bazel  README.md
e2e/fixtures/tarball-xz/.bcr/: metadata.template.json  source.template.json
e2e/fixtures/tarball/.bcr/: metadata.template.json
e2e/fixtures/unversioned/: MODULE.bazel  README.md
e2e/fixtures/unversioned/.bcr/: metadata.template.json
e2e/fixtures/versioned/: MODULE.bazel
e2e/fixtures/versioned/.bcr/: metadata.template.json
e2e/fixtures/zero-versioned/: MODULE.bazel  README.md
e2e/fixtures/zero-versioned/.bcr/: metadata.template.json
e2e/fixtures/zip/: MODULE.bazel  README.md
e2e/fixtures/zip/.bcr/: metadata.template.json
e2e/github-webhook/: BUILD.bazel  README.md  e2e.spec.ts
e2e/github-webhook/__snapshots__/: e2e.spec.js.snap
e2e/github-webhook/fixtures/fixed-releaser/.bcr/: config.yml
e2e/github-webhook/fixtures/multi-module/: MODULE.bazel
e2e/github-webhook/fixtures/tarball/: README.md
e2e/github-webhook/fixtures/versioned/: MODULE.bazel  README.md
e2e/github-webhook/fixtures/zip/.bcr/: metadata.template.json  source.template.json
e2e/github-webhook/helpers/: BUILD.bazel  archive.ts  fixture.ts  webhook.ts
e2e/github-webhook/stubs/: BUILD.bazel  cloud-functions.ts  fake-github.ts  fake-secrets.ts  stubbed-server.ts
e2e/helpers/: BUILD.bazel  archive.ts  email.ts  fixture.ts  webhook.ts
e2e/stubs/: BUILD.bazel  cloud-functions.ts  fake-github.ts  fake-secrets.ts
src/: BUILD.bazel
src/application/: BUILD.bazel  notifications.ts  octokit.ts  release-event-handler.ts
src/application/action/: BUILD.bazel  attest.ts  main.ts
src/application/cli/: BUILD.bazel  app.module.ts  create-entry-command.ts  main.ts  providers.ts  yargs.spec.ts  yargs.ts
src/application/cloudfunction/: github-webhook-entrypoint.ts  index.ts
src/application/webhook/: BUILD.bazel  app.module.ts  index.ts  main.ts  providers.ts
src/domain/: BUILD.bazel  artifact.spec.ts  artifact.ts  attestations-template.spec.ts  attestations-template.ts  config.ts  configuration.spec.ts  configuration.ts  create-entry.spec.ts  create-entry.ts  error.ts  find-registry-fork.spec.ts  find-registry-fork.ts  github.repository.spec.ts  github.repository.ts  integrity-hash.spec.ts  integrity-hash.ts  local-artifact.ts  metadata-file.spec.ts  metadata-file.ts  module-file.spec.ts  module-file.ts  publish-entry.spec.ts  publish-entry.ts  release-archive.spec.ts  release-archive.ts  release-hash.ts  repository.spec.ts  repository.ts  ruleset-repository.spec.ts  ruleset-repository.ts  source-template.spec.ts  source-template.ts  substitution.spec.ts  substitution.ts  user.ts  version.spec.ts  version.ts
src/infrastructure/: BUILD.bazel  email.ts  git.ts  github.ts  secrets.ts
src/infrastructure/xzdec/: BUILD.bazel  MODULE.bazel  README.md  wasm.bzl  xzdec.c  xzdec.ts
src/infrastructure/zstdec/: BUILD.bazel  zstdec.ts
src/test/: BUILD.bazel  mock-template-files.ts  util.ts
templates/: README.md
templates/.bcr/: metadata.template.json  presubmit.yml
templates/.github/workflows/: release-tgz.yml
tools/: BUILD.bazel  clean-dist-files.js  clean.js  config.js  copy-dist-files.js  preset.bazelrc  terraform.bzl  tool.bzl  tool.sh  tools.lock.json
tools/format/: BUILD.bazel
tools/lint/: linters.bzl
