load("//bazel/jest:defs.bzl", "jest_test")
load("//bazel/ts:defs.bzl", "ts_project")

ts_project(
    name = "e2e_tests",
    testonly = True,
    srcs = ["e2e.spec.ts"],
    data = glob(["fixtures/**/*"]) + [
        # e2e tests run a cloud function emulator which runs on the
        # distribution package. The emulator (unlike GCP) doesn't install
        # deps from the included pnpm-lock.yaml file. For simplicity just
        # link all node_modules so that the emulation can resolve its deps.
        "//:node_modules",
    ],
    deps = [
        "//:node_modules/@octokit/core",
        "//:node_modules/@octokit/webhooks-types",
        "//:node_modules/@types/imapflow",
        "//:node_modules/@types/mailparser",
        "//:node_modules/@types/node",
        "//:node_modules/@types/nodemailer",
        "//:node_modules/imapflow",
        "//:node_modules/mailparser",
        "//:node_modules/mockttp",
        "//:node_modules/nodemailer",
        "//:node_modules/simple-git",
        "//e2e/helpers",
        "//e2e/stubs",
        "//src/infrastructure",
    ],
)

jest_test(
    name = "test",
    timeout = "moderate",
    data = [
        ":e2e_tests",
    ],
    snapshots = ["__snapshots__/e2e.spec.js.snap"],
    tags = ["requires-network"],
)
