load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

copy_to_directory(
    name = "dist",
    srcs = [
        "//:package_json",
        "//:pnpm-lock.yaml",
        "//src/domain",
        "//src/infrastructure",
        "//src/infrastructure/xzdec",
        "//src/infrastructure/xzdec:xzdec_wasm_gz",
        "//src/infrastructure/zstdec",
    ],
    visibility = ["//e2e:__subpackages__"],
)
