load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@rules_shell//shell:sh_library.bzl", "sh_library")
load(":terraform.bzl", "terraform")

package(default_visibility = ["//visibility:public"])

bazelrc_preset(
    name = "preset",
    strict = True,  # Enable this to opt-in to flags that are flipped in the upcoming major release
)

terraform(name = "terraform")

sh_library(
    name = "shell",
    srcs = [
        "tool.sh",
    ],
)

exports_files(
    [
        "tool.sh",
    ],
)
