load("@bazelrc-preset.bzl", "bazelrc_preset")
load("@rules_shell//shell:sh_library.bzl", "sh_library")

package(default_visibility = ["//visibility:public"])

bazelrc_preset(name = "preset")

sh_library(
    name = "shell",
    srcs = ["tool.sh"],
)

exports_files(
    [
        "tool.sh",
    ],
)
