load("@aspect_bazel_lib//lib:bats.bzl", "bats_test")

bats_test(
    name = "test",
    size = "small",
    srcs = [
        "e2e.bats",
    ],
    data = [
        "//e2e/fixtures",
        "//e2e/fixtures:versioned",
        "//e2e/fixtures:zip",
        "//src/application/cli:bundle",
        "@nodejs_toolchains//:resolved_toolchain",
    ],
    env = {
        "CLI_BIN": "$(rootpath //src/application/cli:bundle)",
        "NODE_BIN": "$(rootpath @nodejs_toolchains//:resolved_toolchain)",
    },
)
