load("@aspect_bazel_lib//lib:bats.bzl", "bats_test")

bats_test(
    name = "test",
    size = "small",
    srcs = [
        "e2e.bats",
    ],
    data = [
        "//e2e/fixtures",
        "//e2e/fixtures:attestations",
        "//e2e/fixtures:multi-module",
        "//e2e/fixtures:versioned",
        "//e2e/fixtures:zip",
        "//src/application/cli:bundle",
        "@jq_toolchains//:resolved_toolchain",
        "@nodejs_toolchains//:resolved_toolchain",
    ],
    env = {
        "CLI_BIN": "$(rootpath //src/application/cli:bundle)",
        "JQ_BIN": "$(JQ_BIN)",
        "NODE_BIN": "$(rootpath @nodejs_toolchains//:resolved_toolchain)",
    },
    toolchains = [
        "@jq_toolchains//:resolved_toolchain",
    ],
)
