load("//bazel/jest:defs.bzl", "jest_test")
load("//bazel/ts:defs.bzl", "ts_project")

ts_project(
    name = "github-webhook_tests",
    testonly = True,
    srcs = ["e2e.spec.ts"],
    data = [
        "//e2e/fixtures",
        "//e2e/fixtures:attestations",
        "//e2e/fixtures:empty-prefix",
        "//e2e/fixtures:fixed-releaser",
        "//e2e/fixtures:multi-module",
        "//e2e/fixtures:multi-module_invalid_prefix",
        "//e2e/fixtures:no-prefix",
        "//e2e/fixtures:tarball",
        "//e2e/fixtures:unversioned",
        "//e2e/fixtures:versioned",
        "//e2e/fixtures:versioned_invalid_prefix",
        "//e2e/fixtures:tarball-xz",
        "//e2e/fixtures:zero-versioned",
        "//e2e/fixtures:zip",
        # e2e tests run a cloud function emulator which runs on the
        # distribution package. The emulator (unlike GCP) doesn't install
        # deps from the included pnpm-lock.yaml file. For simplicity just
        # link all node_modules so that the emulation can resolve its deps.
        "//:node_modules",
    ],
    deps = [
        "//:node_modules/@octokit/core",
        "//:node_modules/@octokit/webhooks-types",
        "//:node_modules/@types/imapflow",
        "//:node_modules/@types/mailparser",
        "//:node_modules/@types/node",
        "//:node_modules/@types/nodemailer",
        "//:node_modules/imapflow",
        "//:node_modules/mailparser",
        "//:node_modules/mockttp",
        "//:node_modules/nodemailer",
        "//:node_modules/simple-git",
        "//e2e/github-webhook/helpers",
        "//e2e/github-webhook/stubs",
        "//src/infrastructure",
    ],
)

jest_test(
    name = "test",
    timeout = "moderate",
    data = [
        ":github-webhook_tests",
    ],
    snapshots = ["__snapshots__/e2e.spec.js.snap"],
    tags = ["requires-network"],
)
