load("//bazel/ts:defs.bzl", "ts_project")

ts_project(
    name = "infrastructure",
    srcs = [
        "email.ts",
        "git.ts",
        "github.ts",
        "secrets.ts",
    ],
    visibility = [
        "//e2e:__pkg__",
        "//src:__pkg__",
        "//src/application:__subpackages__",
        "//src/domain:__subpackages__",
    ],
    deps = [
        "//:node_modules/@google-cloud/secret-manager",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@octokit/auth-app",
        "//:node_modules/@octokit/rest",
        "//:node_modules/@octokit/types",
        "//:node_modules/@types/nodemailer",
        "//:node_modules/gcp-metadata",
        "//:node_modules/google-auth-library",
        "//:node_modules/nodemailer",
        "//:node_modules/simple-git",
    ],
)
