load("//bazel/ts:defs.bzl", "ts_project")

ts_project(
    name = "infrastructure",
    srcs = [
        "git.ts",
        "github.ts",
    ],
    allow_js = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    visibility = [
        "//e2e:__subpackages__",
        "//src:__pkg__",
        "//src/application:__subpackages__",
        "//src/domain:__subpackages__",
    ],
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@octokit/rest",
        "//:node_modules/@octokit/types",
        "//:node_modules/@types/node",
        "//:node_modules/simple-git",
    ],
)
