load("//bazel/ts:defs.bzl", "ts_project")

ts_project(
    name = "zstdec",
    srcs = ["zstdec.ts"],
    allow_js = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    visibility = [
        "//src:__pkg__",
        "//src/domain:__subpackages__",
    ],
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/fzstd",
    ],
)
